# IntAgentCollaborationDevelopStudio

./: .aider.chat.history.md  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
_tmp_hermes_test/: p.txt
agents/: adapters.py  agent_output.py  base.py  chat_agent.py  claude_code.py  command_cache.py  execute.py  goose_env.py  health.py  interactive.py  path_refresh.py  registry.py  runner.py  version_probe.py
cli/: agent_cli.py  agent_worker.py  expand_cli.py  org_cli.py  relay_agent.py  studio.py
cli/tui/: __init__.py  app.py  theme.tcss
config/: agents.yaml  agents_catalog.yaml  models.yaml  platform.yaml  research_prompt.example.md
config/templates/: 11.yaml  miniapp-wechat-shop.yaml  web-fullstack-vue-fastapi.yaml  岗位推荐.yaml  开发微信小程序-1.yaml  开发微信小程序-2.yaml  开发微信小程序-3.yaml  开发微信小程序-4.yaml  开发微信小程序-5.yaml  开发微信小程序-6.yaml  开发微信小程序.yaml  打鼓游戏.yaml  记账.yaml  贪吃蛇.yaml  贪吃蛇小游戏-1.yaml  贪吃蛇小游戏-10.yaml  贪吃蛇小游戏-11.yaml  贪吃蛇小游戏-12.yaml  贪吃蛇小游戏-13.yaml  贪吃蛇小游戏-14.yaml  贪吃蛇小游戏-15.yaml  贪吃蛇小游戏-16.yaml  贪吃蛇小游戏-17.yaml  贪吃蛇小游戏-18.yaml  贪吃蛇小游戏-19.yaml  贪吃蛇小游戏-2.yaml  贪吃蛇小游戏-20.yaml  贪吃蛇小游戏-21.yaml  贪吃蛇小游戏-3.yaml  贪吃蛇小游戏-4.yaml  贪吃蛇小游戏-5.yaml  贪吃蛇小游戏-6.yaml  贪吃蛇小游戏-7.yaml  贪吃蛇小游戏-8.yaml  贪吃蛇小游戏-9.yaml  贪吃蛇小游戏.yaml  贪吃蛇游戏-1.yaml  贪吃蛇游戏.yaml  通过用户自己搜索自己擅长的技术特长-自动匹配自己可以选择的岗位-1.yaml  通过用户自己搜索自己擅长的技术特长-自动匹配自己可以选择的岗位.yaml
core/: logging.py  project.py  project_profile.py  supervisor_client.py
core/config/: __init__.py  agent_catalog.py  catalog.py  (+3 more)
docs/: INSTALL-AGENTS.md
supervisor/: README.md  build.ps1  go.mod
tests/: test_scaffold.py
(+137 files in other folders)
